v1 concluido